<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity name -->
    <string name="app_name">iSeek</string>
    <string name="activity_setting">Setting</string>

    <!-- 菜单中的文字 -->
    <string name="action_refresh">ReFresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_phoneCall">Call</string>
    <string name="action_exit">Exit</string>

    <!-- 设置页面中的文字 -->
    <!-- Category privateInfo -->
    <string name="set_privateInfo_cate_title">号码设置</string>
    <string name="set_targetPhone_key">targetPhone</string>
    <string name="set_targetPhone_title">GPS 号码</string>
    <string name="set_targetPhone_summary">目标GPS模块中的SIM卡号码</string>
    <string name="set_targetPhone_dialogTitle">GPS Phone</string>
    <string name="set_sosNumber_key">sosNumber</string>
    <string name="set_sosNumber_title">SOS 号码</string>
    <string name="set_sosNumber_summary">GPS关联的紧急联系号码</string>
    <string name="set_sosNumber_dialogTitle">SOS Phone</string>
    <string name="set_oneKeyNumber_key">oneKeyNumber</string>
    <string name="set_corrNumber_title">一键拨号</string>
    <string name="set_corrNumber_summary">一键拨号号码设置</string>
    <string name="set_corrNumber1_key">corrNumber1</string>
    <string name="set_corrNumber1_title">号码一</string>
    <string name="set_corrNumber1_summary">一键拨号-号码一</string>
    <string name="set_corrNumber1_dialogTitle">号码一</string>

    <!-- Category Tool -->
    <string name="set_tool_cate_title">工具</string>
    <string name="set_correntry_key">correntry</string>
    <string name="set_correntry_title">校准</string>
    <string name="set_correntry_summary">用于校准小范围定位误差</string>
    <string name="set_correnable_key">correnable</string>
    <string name="set_correnable_title">使用校准</string>
    <string name="set_correnable_summary_on">已启用校准</string>
    <string name="set_correnable_summary_off">未启用校准</string>
    <string name="set_offline_key">OfflineManage</string>
    <string name="set_offline_title">离线管理</string>
    <string name="set_offline_summary">管理离线地图</string>

    <!-- Category About -->
    <string name="set_about_cate_title">关于</string>
    <string name="set_guide_key">guide</string>
    <string name="set_guide_title">使用说明</string>
    <string name="set_guide_summary">iSeek使用说明</string>
    <string name="set_about_key">about</string>
    <string name="set_about_title">关于 iSeek</string>
    <string name="set_about_summary"></string>

    <!-- key-上次定位位置 -->
    <string name="set_last_latitude_key">LastLatitude</string>
    <string name="set_last_longitude_key">LastLongitude</string>

    <!-- key-校准内容存储 -->
    <string name="corr_point_size_key">CorrPointSize</string>
    <string name="target_point_0_key">TargetPoint0</string>
    <string name="target_point_1_key">TargetPoint1</string>
    <string name="target_point_2_key">TargetPoint2</string>
    <string name="target_point_3_key">TargetPoint3</string>
    <string name="target_point_4_key">TargetPoint4</string>
    <string name="target_point_5_key">TargetPoint5</string>
    <string name="target_point_6_key">TargetPoint6</string>
    <string name="target_point_7_key">TargetPoint7</string>
    <string name="target_point_8_key">TargetPoint8</string>
    <string name="target_point_9_key">TargetPoint9</string>
    <string name="origin_point_0_key">OriginPoint0</string>
    <string name="origin_point_1_key">OriginPoint1</string>
    <string name="origin_point_2_key">OriginPoint2</string>
    <string name="origin_point_3_key">OriginPoint3</string>
    <string name="origin_point_4_key">OriginPoint4</string>
    <string name="origin_point_5_key">OriginPoint5</string>
    <string name="origin_point_6_key">OriginPoint6</string>
    <string name="origin_point_7_key">OriginPoint7</string>
    <string name="origin_point_8_key">OriginPoint8</string>
    <string name="origin_point_9_key">OriginPoint9</string>
    <string name="corr_coef_a_key">CorrCoefA</string>
    <string name="corr_coef_b_key">CorrCoefB</string>
    
    <!-- key-一键拨号 -->
    <string name="onekey_number_1_key">oneKeyNum1</string>
    <string name="onekey_number_2_key">oneKeyNum2</string>
    <string name="onekey_number_3_key">oneKeyNum3</string>

    <!-- String in Toast -->
    <string name="ToastErrorInternet">网络连接出错</string>
    <string name="ToastErrorSearchData">搜索数据出错</string>
    <string name="ToastErrorMapKey">Invalid BaiduMapKey</string>
    <string name="ToastTargetSetOK">目标GPS手机号码设置成功!</string>
    <string name="ToastSosSetOK">关联SOS号码设置成功!</string>
    <string name="ToastInvalidPhoneNumber">请输入有效地手机号码</string>
    <string name="ToastTargetSetEmpty">请设置GPS中的手机号码</string>
    <string name="ToastSosSetEmpty">请设置关联的SOS号码</string>
    <string name="ToastExitWarning">再按一次退出</string>
    <string name="ToastCorrPressFirst">请先触摸屏幕选择一个点</string>
    <string name="ToastZoomInMax">已放大到最大级别</string>
    <string name="ToastZoomInMin">已缩小到最小级别</string>
<!--     <string name="ToastUnknowSMSheader">注意:不能识别的短信</string> -->
    <string name="ToastCorrPointFull">请先清除掉部分校准数据</string>
    <string name="ToastCoefNull">不存在校准内容，请先生成校准量</string>
    <string name="ToastCoefWait">校准功能目前未开放</string>
    <string name="ToastCoefCreated">成功生成校准量</string>
    <string name="ToastCoefCalcNull">请先勾选用于计算的数据组</string>
    <string name="ToastCorrDeletedOK">删除成功</string>
    <string name="ToastCorrDeletedNull">请先勾选要删除的数据组</string>
    <string name="ToastOneKeySetNum1Fail">号码一设置失败</string>
    <string name="ToastOneKeySetNum2Fail">号码二设置失败</string>
    <string name="ToastOneKeySetNum3Fail">号码三设置失败</string>
    <string name="ToastOneKeySetNumOK">设置成功</string>

    <!-- logDialog中的文字 -->
    <string name="DialogTitle">iSeeking…</string>
    <string name="DialogMsgHeader">正在努力连接中…</string>
    <string name="DialogSendOK">成功发送请求!</string>
    <string name="DialogSendFail">请求发送失败!</string>
    <string name="DialogDeliveryOK">目标成功接收请求，请耐心等待1–2分钟…</string>
    <string name="DialogDeliveryFail">目标接收请求失败!</string>
    <string name="DialogGpsNotFix">GPS未能正常工作!</string>
    <string name="DialogSosSendGpsOK">GPS:成功发送请求!</string>
    <string name="DialogSosSendGpsFail">GPS:请求发送失败!</string>
    <string name="DialogSosDeliveryGpsOK">GPS:成功接收请求!</string>
    <string name="DialogSosDeliveryGpsFail">GPS:请求接收失败!</string>
    <string name="DialogSosSendTarOK">SOS:成功发送通知!</string>
    <string name="DialogSosSendTarFail">SOS:通知发送失败!</string>
    <string name="DialogSosDeliveryTarOK">SOS:成功接收通知!</string>
    <string name="DialogSosDeliveryTarFail">SOS:通知接收失败!</string>
    <string name="DialogSosFeedBackGpsOK">GPS:设置成功!</string>
    <string name="DialogAlarmGot">连接超时，请重试</string>

    <!-- imageButton ContextDescription -->
    <string name="BtnTraffic">Traffic</string>
    <string name="BtnSatellite">Satellite</string>
    <string name="BtnMenuCall">Call</string>
    <string name="BtnMenuSettings">Settings</string>
    <string name="BtnMenuSeekGps">定位</string>
    <string name="BtnZoomIn">+</string>
    <string name="BtnZoomOut">-</string>
    <string name="BtnMoveLeft">&#60; </string>
    <string name="BtnMoveRight">&#62; </string>
    <string name="BtnMoveUp">^</string>
    <string name="BtnMoveDown">v</string>

    <!-- 关于页面 -->
    <string name="AboutCopyRight0">iSeek for Android V1.1</string>
    <string name="AboutCopyRight1">西安电子科技大学</string>
    <string name="AboutCopyRight2">版权所有©CopyRight，2013–2014</string>
    <string name="AboutCopyRight3">保留所有权利</string>

    <!-- 离线地图管理页面 -->
    <string name="OfflineCityHint">输入查询城市</string>
    <string name="OfflineBtnRequest">查询</string>
    <string name="OfflineBtnDownload">下载</string>
    <string name="OfflineDetailHint">请输入城市查询下载</string>
    <string name="OfflineChildCityHint">地图包:没有下属地区地图包</string>
    <string name="OfflineChildCityHeader">地图包:</string>
    <string name="OfflineTitleRequest">地图下载</string>
    <string name="OfflineTitleLocal">本地管理</string>
    <string name="OfflineTextSize">大小:</string>
    <string name="OfflineTextRatio">已下载:</string>
    <string name="OfflineTextSelectHint">请选择</string>
    <string name="OfflineTextUpdate">更新:</string>
    <string name="OfflineTextUpdateAvaliable">可更新</string>
    <string name="OfflineTextUpdateNotAvaliable">无更新</string>
    <string name="OfflineCityNameEmpty">请输入需要查询的城市</string>
    <string name="OfflineBtnUpdate">更新</string>
    <string name="OfflineBtnDelete">删除</string>
    <string name="OfflineDeleteOK">地图删除成功</string>
    <string name="OfflineDeleteFail">地图删除失败</string>
    <string name="OfflineDownloadStart">地图开始下载</string>
    <string name="OfflineRequestNull">对不起，没有查询到地图</string>
    <string name="OfflineRequestDownload">可下载</string>
    <string name="OfflineRequestNewest">已最新</string>
    <string name="OfflineRequestUpdate">可更新</string>
    <string name="OfflineRequestDownloadOK">可更新</string>
    <string name="OfflineDownloadEnd">地图下载完成</string>
    <string name="OfflineAlertDeleteTitle">删除</string>
    <string name="OfflineAlertDeleteHint">确定删除本地地图？</string>

    <!-- title bar中的文字 -->
    <string name="TitleBarAbout">关于</string>
    <string name="TitleBarOffline">离线管理</string>
    <string name="TitleBarSetting">设置</string>
    <string name="TitleBarSetNumber">号码设置</string>
    <string name="TitleBarGuide">使用说明</string>
    <string name="TitleBarCorr">校准</string>

    <!-- 校准中文字 -->
    <string name="CorrAlertTitle">校准</string>
    <string name="CorrAlertMsgWarn">确定对这个点进行校准吗？</string>
    <string name="CorrAlertMsgNoLocate">校准前请先定位成功！</string>
    <string name="CorrAlertMsgCorrUsed">进入校准模式，请先关闭自动校准再重新定位！</string>
    <string name="btnCorrDelete">删除</string>
    <string name="btnCorrCalc">计算校准系数</string>
    <string name="CorrGuideTitle">校准步骤</string>
    <string name="CorrGuideContext">1、选择偏移量相对稳定的数据组\n2、点击计算校准量按钮\n3、在设置页面勾选使用校准</string>
    <string name="CorrListOrigin">原始数据</string>
    <string name="CorrListTarget">手动校准</string>
    <string name="CorrListDiff">误差</string>
    
    <!-- onekey中的文字 -->
    <string name="OKeySetTitle">一键设置</string>
    <string name="OKeyNumber1">No1:</string>
    <string name="OKeyNumber2">No2:</string>
    <string name="OKeyNumber3">No3:</string>
    <string name="OKeyNumberHint">请输入号码</string>
    <string name="OKeyBtnSetNumber">设置</string>
    <string name="OKeyInfoTitle">信息</string>
    <string name="OKeyInfoTargetNumber">GPS号码：</string>
    <string name="OKeyInfoSOSNumber">SOS号码：</string>
    <string name="OKeyInfoNumber1">号码一：</string>
    <string name="OKeyInfoNumber2">号码二：</string>
    <string name="OKeyInfoNumber3">号码三：</string>
    <string name="OKeyInfoNumberUnset">未设置</string>
    <string name="OKeyAlertTitle">号码设置</string>
    <string name="OKeyAlertInvalidNum1">号码一无效！</string>
    <string name="OKeyAlertInvalidNum2">号码二无效！</string>
    <string name="OKeyAlertInvalidNum3">号码三无效！</string>
    <string name="OKeyAlertInValidAll">请输入有效的手机号码</string>
    <string name="OKeyAlertMsgHeader">是否设置号码：</string>
    <string name="OKeyAlertValidAll">是否设置所有号码？\n(设置过程需要一定时间，请在两分钟后再测试是否成功)</string>

    <!-- 使用说明页面 -->
    <string name="GuideTextApp">
        关于应用：\n\t
        1.可以照看老人、小孩\n\t
        2.可以用于汽车防盗\n\t
        3.可以监控贵重物品\n\t
        4.应用在手，时刻掌握位置
        </string>
   
    <string name="GuideTextNumber">
        关于号码：\n\t
        1.在[设置]中绑定GPS模块号码\n\t
        2.在[设置]中设置GPS的SOS号码\n\t
        3.还能设置GPS的报警号码
        </string>
    
    <string name="GuideTextOffline">
        关于地图：\n\t
        1.可以查询城市并下载地图\n\t
        2.可以删除、更新本地地图\n\t
        3.无需联网，也能定位
        </string>
        
     <string name="GuideTextCorr">
        关于校准：\n\t
        1.在无校准情况下定位成功\n\t
        2.选择部分数据组计算校准系数\n\t
        3.在[设置]->[使用校准]处勾选\n\t
        4.如需禁用，请去掉勾选
        </string>

    <!-- 其他 -->
    <string name="hello_world">Hello world!</string>
    <string name="OK">OK</string>
    <string name="CANCLE">CANCLE</string>
    <string name="OK_CH">确认</string>
    <string name="CANCLE_CH">取消</string>
    <string name="WarnDialogCheckBoxHint">勾选不再显示这条消息</string>

</resources>