<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android">    
    
    <PreferenceCategory android:title="@string/set_privateInfo_cate_title">    
	    <EditTextPreference
	        android:key="@string/set_targetPhone_key"
	        android:title="@string/set_targetPhone_title"
	        android:summary="@string/set_targetPhone_summary"
	        android:dialogTitle="@string/set_targetPhone_dialogTitle"       
	    />
	    <EditTextPreference
	        android:key="@string/set_sosNumber_key"
	        android:title="@string/set_sosNumber_title"
	        android:summary="@string/set_sosNumber_summary"
	        android:dialogTitle="@string/set_sosNumber_dialogTitle"
	    />   
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/set_about_cate_title" > 
        <PreferenceScreen
            android:key="@string/set_about_key"
            android:title="@string/set_about_title"
            android:summary="@string/set_about_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.baidu.com" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>