<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView 
        android:layout_gravity="center_horizontal" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20.0dip" 
        android:src="@drawable/ic_launcher"
        android:background="#ff000000" />
    
	<TextView 
	    android:textSize="16sp" 
	    android:textColor="#ff000000" 
	    android:layout_gravity="center_horizontal" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="30dip" 
	    android:text="@string/AboutCopyRight0" />
	
	<TextView 
	    android:textSize="20sp" 
	    android:textColor="#ff000000" 
	    android:layout_gravity="center_horizontal" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="30.0dip" 
	    android:text="@string/AboutCopyRight1" />
	
	<TextView 
	    android:textSize="16sp" 
	    android:textColor="#ff000000" 
	    android:layout_gravity="center_horizontal" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="30dip" 
	    android:text="@string/AboutCopyRight2" />
	
	<TextView 
	    android:textSize="16sp" 
	    android:textColor="#ff000000" 
	    android:layout_gravity="center_horizontal" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/AboutCopyRight3" />
	
</LinearLayout>