<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_phoneCall"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_phoneCall"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:title="@string/action_settings"/>    
    
    <item
        android:id="@+id/action_test"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="test"/>
         
    <item
        android:id="@+id/action_correction"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="corration"/>  
         
    <!-- 
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
     -->

</menu>